RESOLVED FIXED214122
REGRESSION (r259840): Pressing Esc or ⌘+"." does not dismiss time picker on iOS
https://bugs.webkit.org/show_bug.cgi?id=214122
Summary REGRESSION (r259840): Pressing Esc or ⌘+"." does not dismiss time picker on iOS
Wenson Hsieh
Reported 2020-07-08 21:58:18 PDT
Attachments
Patch (14.99 KB, patch)
2020-07-09 11:59 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-07-09 11:59:39 PDT
Tim Horton
Comment 2 2020-07-09 12:16:53 PDT
Comment on attachment 403898 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=403898&action=review > Source/WebKit/UIProcess/ios/forms/WKDateTimeInputControl.mm:379 > + if (elementType == InputType::Time || elementType == InputType::DateTimeLocal) I know this was already here... but is there a better way to know or infer the right set of types, instead of keeping a list here?
Wenson Hsieh
Comment 3 2020-07-09 12:33:01 PDT
Comment on attachment 403898 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=403898&action=review Thanks for the review! >> Source/WebKit/UIProcess/ios/forms/WKDateTimeInputControl.mm:379 >> + if (elementType == InputType::Time || elementType == InputType::DateTimeLocal) > > I know this was already here... but is there a better way to know or infer the right set of types, instead of keeping a list here? That’s a good question. I don’t think there’s a way to know without poking around in UIKit internals, because the thing that actually steals FR in these controls is _UIDatePickerCalendarTimeLabel (an internal class). I think we could maybe make this consult -[UIDatePicker datePickerMode] and -[UIDatePicker datePickerStyle] instead, but the logic would look pretty similar to what we have already.
Tim Horton
Comment 4 2020-07-09 12:39:59 PDT
Maybe in the distant future we could ask UIKit to vend an explicit bit for this.
Wenson Hsieh
Comment 5 2020-07-09 12:43:43 PDT
Comment on attachment 403898 [details] Patch (In reply to Tim Horton from comment #4) > Maybe in the distant future we could ask UIKit to vend an explicit bit for > this. 👍🏻
EWS
Comment 6 2020-07-09 12:46:14 PDT
Committed r264187: <https://trac.webkit.org/changeset/264187> All reviewed patches have been landed. Closing bug and clearing flags on attachment 403898 [details].
Note You need to log in before you can comment on or make changes to this bug.