Source/WebKit/UIProcess/ios/WKContentViewInteraction.h
@@ -377,6 +377,7 @@ struct WKAutoCorrectionData {
     BOOL _isChangingFocus;
     BOOL _isFocusingElementWithKeyboard;
     BOOL _isBlurringFocusedElement;
+    BOOL _isRelinquishingFirstResponderToFocusedElement;
 
     BOOL _focusRequiresStrongPasswordAssistance;
     BOOL _waitingForEditDragSnapshot;
@@ -548,8 +549,8 @@ FOR_EACH_PRIVATE_WKCONTENTVIEW_ACTION(DECLARE_WKCONTENTVIEW_ACTION_FOR_WEB_VIEW)
 
 - (NSString *)inputLabelText;
 
-- (void)preserveFocus;
-- (void)releaseFocus;
+- (void)startRelinquishingFirstResponderToFocusedElement;
+- (void)stopRelinquishingFirstResponderToFocusedElement;
 
 // UIWebFormAccessoryDelegate protocol
 - (void)accessoryDone;
